Fixed terminal size and added white border
Terminal looked stretched to the right, adjusted the width for this.
Added a small white border for aesthetics.

--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ body, h1,h2,h3, p{
     
 .terminalCont{ 
     background: black; 
-    width: 75vw; 
+    width: 66vw; 
+    border: 2px solid white;
     border-radius: 8px; 
     padding:12px 0 0 0; 
     margin-top: -20px; 
@@ -96,7 +97,7 @@ body, h1,h2,h3, p{
 #terminalTextInput{ 
     background: black; 
     display: block; 
-    border: none; 
+    border: none;
     border-top: 1px solid rgba(9, 255, 0, 0.2); 
     border-radius: 0 0 8px 8px; 
     width: 100%; 
